<resources>
    <string name="app_name">宿舍管理系统</string>
    <string name="title_activity_main">宿舍管理系统</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="rule_password">.@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>

    <string name="My_Information">我的</string>
    <string name="Repair">报修进度</string>
    <string name="Settings">设置</string>
    <string name="Enrollment">离校登记</string>
    <string name="Share">分享</string>
    <string name="About">关于</string>
    <string name="Account">账号</string>
    <string name="Pwd">密码</string>
    <string name="Login">登录</string>
    <string name="Forget_my_Pwd">忘记密码?</string>
    <string name="New_Member">注册</string>
    <string name="Modify_Pwd">修改密码</string>
    <string name="Remember">记住密码</string>
    <string name="Schedule">进度查询</string>
    <string name="Student_ID">学号</string>
    <string name="Student_Name">姓名</string>
    <string name="Student_Department">专业</string>
    <string name="Student_Class">班级</string>
    <string name="Start_Time">起始时间</string>
    <string name="End_Time">终止时间</string>
    <string name="ELS_Button_Text">好</string>
    <string name="ELS_Reason">原因</string>
    <string name="Your_Id">你的学号</string>
    <string name="Your_Name">你的姓名</string>
    <string name="Repair_Area">报修区域</string>
    <string name="Repair_Place">报修地点</string>
    <string name="Repair_Category">报修类别</string>
    <string name="Repair_Content">Repair Content</string>
    <string name="Repair_Detail">描述</string>
    <string name="Contact_Info">联系方式</string>
    <string name="Appointment_Date">预约日期</string>
    <string name="Appointment_Time">预约时间</string>
    <string name="Please_Select">请选择</string>
    <string name="Your_Place">你的地址</string>
    <string name="Your_Detail">一些描述</string>
    <string name="Your_Contact">你的联系方式</string>
    <string name="Photo">照片</string>
    <string name="Add_Your_Photo">添加照片</string>
    <string name="Public_Area">公共区</string>
    <string name="Living_Area">生活区</string>
    <string name="Electrician">电工类</string>
    <string name="Hydraulic">水工类</string>
    <string name="Woodworking">木工类</string>
    <string name="Construction">土建类</string>
    <string name="Equipment">设备类</string>
    <string name="Other">杂项</string>
    <string name="Send">发送</string>
    <string name="By">从...</string>
    <string name="By_Camera">拍照</string>
    <string name="By_Album">相册</string>
    <string name="Cancel">取消</string>
    <string name="Switch_Account">切换账号</string>
    <string name="Delete_Account_Info">删除账号信息</string>
    <string name="Modify_Your_Avatar">头像选择</string>
    <string name="Server">192.168.240.1</string>
    <string name="DataBaseName">students</string>
    <string name="User">sa</string>
    <string name="UserPwd">zkw012300</string>
    <string name="Need_Permission">需要权限</string>
    <string name="The_Application_Need_the_Permission">应用需要权限</string>
    <string name="Delete_Successfully">删除成功！</string>
    <string name="Back_late">夜归处理</string>
    <string name="Student_College">院系</string>
    <string name="Reg">注册</string>
    <string name="Return_Time">夜归时间</string>
    <string name="app_git">https://github.com/zkw012300/DMDemo</string>
    <string name="webservice_git">https://github.com/zkw012300/DMS</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
