<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/My_Information"
            android:checked="true"/>
        <item
            android:id="@+id/nav_repair"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Repair" />
        <item
            android:id="@+id/nav_els"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/Enrollment" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Feedback" />
        </menu>
    </item>

</menu>
