<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Repair_Place"/>

        <EditText
            android:id="@+id/sub_edittext_place"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/Your_Place"
            android:textSize="12dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Repair_Category"/>

        <TextView
            android:id="@+id/sub_repairType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:hint="@string/Please_Select"
            android:textSize="12dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_keyboard_arrow_left_black_48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Repair_Detail"/>

        <EditText
            android:id="@+id/sub_edittext_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/Your_Detail"
            android:textSize="12dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Contact_Info"/>

        <EditText
            android:id="@+id/sub_edittext_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/Your_Contact"
            android:textSize="12dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>