<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/Student_ID" />

        <EditText
            android:id="@+id/edittext_studId"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="4.5"
            android:hint="@string/Student_ID"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:textSize="14dp"
            android:gravity="center"
            android:maxLines="1"
            android:background="@null" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/Student_Name" />

        <EditText
            android:id="@+id/edittext_studName"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="4.5"
            android:hint="@string/Student_Name"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:textSize="14dp"
            android:background="@null"
            android:gravity="center"
            android:maxLines="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/Start_Time"/>

        <TextView
            android:id="@+id/els_start_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:hint="@string/Start_Time"
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:gravity="center" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:src="@drawable/ic_keyboard_arrow_down_black_48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/End_Time"/>

        <TextView
            android:id="@+id/els_end_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:layout_weight="4.5"
            android:hint="@string/End_Time"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:gravity="center" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:src="@drawable/ic_keyboard_arrow_down_black_48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/ELS_Reason"/>

        <EditText
            android:id="@+id/els_reason"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:maxLines="1"
            android:hint="@string/ELS_Reason"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:textSize="14dp"
            android:gravity="center"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/els_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAllCaps="false"
        android:text="@string/ELS_Button_Text"/>

</LinearLayout>
