<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/Return_Time" />

        <TextView
            android:id="@+id/blf_returnTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/Return_Time"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:textSize="14dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/ELS_Reason"/>

        <EditText
            android:id="@+id/blf_reason"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:maxLines="1"
            android:hint="@string/ELS_Reason"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorGray"
            android:textSize="14dp"
            android:gravity="center"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/blf_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAllCaps="false"
        android:text="@string/ELS_Button_Text"/>

</LinearLayout>
