<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_account_box_black_48dp"/>

        <EditText
            android:id="@+id/edittext_account"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="4.5"
            android:background="@null"
            android:maxLines="1"
            android:digits="@string/rule_password"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_lock_outline_black_48dp"/>

        <EditText
            android:id="@+id/edittext_pwd"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="4.5"
            android:password="true"
            android:gravity="center"
            android:maxLines="1"
            android:background="@null" />

        <ImageView
            android:id="@+id/pwd_visible"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:src="@drawable/ic_visibility_off_black_48dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <CheckBox
        android:id="@+id/remember_pwd"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Remember"
        android:textColor="@color/colorAccent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Login"
        android:textAllCaps="false"/>

</LinearLayout>
